# CS-E4780-Financial-Analysis-Application

./: .gitignore  README.md  docker-compose.yaml  flink-conf.yaml
accuracy-testing/: accuracy_checker.py  actual_ema_breakout_calculator.py  data_creater.py  system_ema_breakout_collector.py
cache/: Dockerfile  redis.conf
consumer/: Dockerfile  backup.txt  flink-conf.yaml  flink_job.py  flink_job_ema.py  flink_job_last_price.py  flink_job_price.py  flink_job_same_window.py  flink_job_topic_read.py  submit_job.sh
database/: .create_tables.sql.swp  Dockerfile  create_tables.sql
frontend/: Financial Data Analysis.json
frontend/provisioning/dashboards/: dashboards.yml
frontend/provisioning/datasources/: datasources.yml
producer/: Dockerfile  create_topic.sh  main.py
python-db-helper/: Dockerfile  config.py  populate_stocks.py  requirements.txt  stocks.csv
test-data/: breakout_calculator.py  ema_calculator.py  id-map.txt  long_tail_data_producer.py  stats.py  stats.txt  test_data_producer.py
timescale-fastapi/: Dockerfile  main.py  pyproject.toml  requirements.txt
timescale-fastapi/database/: redisclient.py  timescale.py
timescale-fastapi/models/: stock_models.py
timescale-fastapi/routes/: stock_routes.py
timescale-fastapi/src/database/: timescale.py
timescale-fastapi/src/routes/: stock_routes.py
